# ItemBuildL

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_advisor.rs  engine.rs  game_state.rs  lib.rs  main.rs  poller.rs
src-tauri/src/knowledge/: items.json  matchups.json  synergies.json
src/components/: ItemPanel.tsx  LanePanel.tsx  ObjectivesPanel.tsx
